--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <label>E-mail</label>
     <input id="e-mail" type="email" placeholder="Seu e-mail" /> <br />
     <label>Senha</label>
-    <input id="senha" type="senha" placeholder="Sua senha" /> <br />
+    <input id="senha" type="password" placeholder="Sua senha" /> <br />
     <button>Cadastrar</button>
 
 
