--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <body>
     <h1>Formulários de cadastro</h1>
     <label>Nome</label>
-    <input id="name" type="name" placeholder="Seu nome" /> <br />
+    <input id="name" type="text" placeholder="Seu nome" /> <br />
     <label>E-mail</label>
-    <input id="e-mail" type="email" placeholder="Seu e-mail" /> <br />
+    <input id="email" type="email" placeholder="Seu e-mail" /> <br />
     <label>Senha</label>
     <input id="senha" type="password" placeholder="Sua senha" /> <br />
-    <button>Cadastrar</button>
-
-
-
+    <button>
+        Cadastrar
+    </button>
 </body>
 </html>
