--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 </head>
 <body>
     <h1>Formulários de cadastro</h1>
-    <label>Nome</label>
-    <input id="name" type="text" placeholder="Seu nome" /> <br />
-    <label>E-mail</label>
-    <input id="email" type="email" placeholder="Seu e-mail" /> <br />
-    <label>Senha</label>
-    <input id="senha" type="password" placeholder="Sua senha" /> <br />
-    <button>
+    <form>
+        <label>Nome</label>
+        <input id="name" type="text" placeholder="Seu nome" /> <br />
+        <label>E-mail</label>
+        <input id="email" type="email" placeholder="Seu e-mail" /> <br />
+        <label>Senha</label>
+        <input id="senha" type="password" placeholder="Sua senha" /> <br />
+    <button type="submit">
         Cadastrar
     </button>
+    </form>
 </body>
 </html>
